# CMakeTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  application.cpp  config.hpp.in
subdir/: CMakeLists.txt  Something.cpp  Something.hpp
